syntax = "proto3";

package vou.proto.auth;

import "auth/rpc_create_user.proto";
import "auth/rpc_login_user.proto";
import "auth/rpc_authorize_user.proto";

option go_package = "VOU-Server/proto/gen";

service AuthService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
  rpc AuthorizeUser(AuthorizeRequest) returns (AuthorizeResponse) {}
}
